Added a method to spawn characters on a remote computer. This is necessary for network gaming! However, this has introduced a small bug where all of the spawn info is not being processed. All of the characters spawn facing "north" (I think). Also, weapons are not spawned properly.
The A* pathfinding is working (though only zombor uses it). There needs to be a way to limit make sure that it does not execute too often, and object collisions need to be factored in.

I'm sure there are many other random changes.

--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -22,6 +22,7 @@
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(SolutionDir)\enet&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_DEPRECATE;_CONSOLE"
+				GeneratePreprocessedFile="0"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="FALSE"
@@ -167,6 +168,9 @@
 			</File>
 			<File
 				RelativePath=".\egoboo_math.inl">
+			</File>
+			<File
+				RelativePath=".\egoboo_rpc.c">
 			</File>
 			<File
 				RelativePath=".\egoboo_strutil.c">
@@ -319,6 +323,12 @@
 				RelativePath=".\passage.c">
 			</File>
 			<File
+				RelativePath=".\Physics.c">
+			</File>
+			<File
+				RelativePath=".\Physics.inl">
+			</File>
+			<File
 				RelativePath=".\script.c">
 			</File>
 			<File
@@ -405,6 +415,9 @@
 				RelativePath=".\egoboo_math.h">
 			</File>
 			<File
+				RelativePath=".\egoboo_rpc.h">
+			</File>
+			<File
 				RelativePath=".\egoboo_strutil.h">
 			</File>
 			<File
@@ -475,6 +488,9 @@
 			</File>
 			<File
 				RelativePath=".\passage.h">
+			</File>
+			<File
+				RelativePath=".\Physics.h">
 			</File>
 			<File
 				RelativePath=".\proto.h">
