Applied file_lin.c and Makefile.unix patch by thebohemian. Some minor change to Makefile

--- a/game/Makefile
+++ b/game/Makefile
@@ -44,9 +44,8 @@ SOURCES=camera.c\
 	Timer.c\
 	Ui.c
 
-
 OBJECTS=$(SOURCES:%.c=%.o)
-CFLAGS=`sdl-config --cflags` -I../enet -IC:/SDKs/SDL_mixer-1.2.8  -IC:/SDKs/SDL-1.2.13/include -IC:/SDKs/SDL_ttf-2.0.9
+CFLAGS=`sdl-config --cflags` -IENET_PATH -ISDL_MIXER_PATH  -ISDL_PATH -ISDL_TTF_PATH
 LDFLAGS=`sdl-config --libs` -L../enet -lopengl32 -lglu32 -lenet -lSDL_ttf -lws2_32 -lshlwapi -lshfolder -lshell32
 
 $(TARGET): $(OBJECTS)
