--- a/game/game_vs9.vcproj
+++ b/game/game_vs9.vcproj
@@ -387,6 +387,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\AStar.c"
+				>
+			</File>
+			<File
 				RelativePath=".\camera.c"
 				>
 			</File>
@@ -748,6 +752,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\AStar.h"
+				>
+			</File>
 			<File
 				RelativePath=".\camera.h"
 				>
