Conclusion of enet updates. Should build on all supported versions of VisualStudio. If not, load the project file for *_vs7.sln and MAKE SURE YOU SAVE to the proper version of *_vs*.sln so you do not contaminate anyone else's project file.
In addition, enet should build on linux. With the given files, you have to run 

aclocal
automake -a -c --foreign
autoconf
make

Once the aclocal through autoconf have been run once, they never need be run again.

--- a/enet/enet_vs8.vcproj
+++ b/enet/enet_vs8.vcproj
@@ -142,6 +142,18 @@
 			</File>
 			<File
 				RelativePath=".\unix.c">
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\win32.c">
@@ -155,9 +167,6 @@
 				RelativePath=".\include\enet\callbacks.h">
 			</File>
 			<File
-				RelativePath=".\include\enet\_time.h">
-			</File>
-			<File
 				RelativePath=".\include\enet\enet.h">
 			</File>
 			<File
@@ -168,6 +177,9 @@
 			</File>
 			<File
 				RelativePath=".\include\enet\protocol.h">
+			</File>
+			<File
+				RelativePath=".\include\enet\time.h">
 			</File>
 			<File
 				RelativePath=".\include\enet\types.h">
