--- a/enet/enet_vs7.vcproj
+++ b/enet/enet_vs7.vcproj
@@ -20,7 +20,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(ProjectDir)\include\enet"
+				AdditionalIncludeDirectories="$(ProjectDir)\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -74,7 +74,7 @@
 				EnableIntrinsicFunctions="TRUE"
 				FavorSizeOrSpeed="1"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="$(ProjectDir)\include\enet"
+				AdditionalIncludeDirectories="$(ProjectDir)\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -124,9 +124,6 @@
 				RelativePath=".\list.c">
 			</File>
 			<File
-				RelativePath=".\memory.c">
-			</File>
-			<File
 				RelativePath=".\packet.c">
 			</File>
 			<File
@@ -137,6 +134,18 @@
 			</File>
 			<File
 				RelativePath=".\unix.c">
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\win32.c">
@@ -150,9 +159,6 @@
 				RelativePath=".\include\enet\callbacks.h">
 			</File>
 			<File
-				RelativePath=".\include\enet\_time.h">
-			</File>
-			<File
 				RelativePath=".\include\enet\enet.h">
 			</File>
 			<File
@@ -163,6 +169,9 @@
 			</File>
 			<File
 				RelativePath=".\include\enet\protocol.h">
+			</File>
+			<File
+				RelativePath=".\include\enet\time.h">
 			</File>
 			<File
 				RelativePath=".\include\enet\types.h">
