--- a/game/game_vs8.vcproj
+++ b/game/game_vs8.vcproj
@@ -66,7 +66,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="shlwapi.lib SHFolder.lib Shell32.lib SDL.lib SDLmain.lib opengl32.lib glu32.lib ws2_32.lib SDL_ttf.lib SDL_mixer.lib sdl_image.lib"
+				AdditionalDependencies="SDL_image.lib SDL.lib SDLmain.lib SDL_ttf.lib SDL_mixer.lib opengl32.lib glu32.lib ws2_32.lib shlwapi.lib Winmm.lib"
 				OutputFile="$(OutDir)/Egoboo2x.exe"
 				Version=""
 				LinkIncremental="2"
@@ -155,7 +155,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="shlwapi.lib SHFolder.lib Shell32.lib SDL.lib SDLmain.lib opengl32.lib glu32.lib ws2_32.lib SDL_ttf.lib SDL_mixer.lib SDL_image.lib"
+				AdditionalDependencies="SDL_image.lib SDL.lib SDLmain.lib SDL_ttf.lib SDL_mixer.lib opengl32.lib glu32.lib ws2_32.lib shlwapi.lib Winmm.lib"
 				OutputFile="$(OutDir)/Egoboo2x.exe"
 				Version=""
 				LinkIncremental="1"
