This should fix any changes due to the renaming of menu.c->Menu.c and network.c->Network.c.
The MSVC build *_vs7.* have been tested

--- a/game/Makefile
+++ b/game/Makefile
@@ -24,10 +24,10 @@ SOURCES=camera.c\
 	Log.c\
 	MainLoop.c\
 	Md2.c\
-	menu.c\
+	Menu.c\
 	mesh.c\
 	module.c\
-	network.c\
+	Network.c\
 	ogl_include.c\
 	ogl_texture.c\
 	particle.c\
