--- a/enet/Makefile.am
+++ b/enet/Makefile.am
@@ -1,5 +1,15 @@
+SUBDIRS = include
+
+libenetdocdir = ${prefix}/doc/libenet
+libenetdoc_DATA = \
+	README\
+	LICENSE\
+	ChangeLog\
+	tutorial.txt\
+	design.txt
+
+EXTRA_DIST = $(libenetdoc_DATA)
+
 lib_LIBRARIES = libenet.a
 libenet_a_SOURCES = host.c list.c callbacks.c packet.c peer.c protocol.c unix.c win32.c
 INCLUDES = -Iinclude/
-
-SUBDIRS = include
