Made some changes inspired (and dictated) by TuxBoo2.
- Changed the definition of INLINE to static inline for all non-win32 systems
- Changed some #include directives to make sure all the INLINE'd functions that are used are defined
- Updated configure.ac Makefile.am and game/Makefile.am so that they should automake
- added INLINE specs to the particle.inl functions
- Fixed an oversight on fs_FindFirstFile() in file_lin.c that was generating the incorrect search names

--- a/game/Makefile.am
+++ b/game/Makefile.am
@@ -1,142 +1,84 @@
+AM_CPPFLAGS = \
+   -DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
+   -DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
+   -DPACKAGE_DATA_DIR=\""$(datadir)"\" $(EGOBOO_CFLAGS)
 
-bin_PROGRAMS = \
-	egoboo-2.7.7
+AM_CFLAGS =\
+    -Wall\
+    -g
 
-egoboo_2_7_7_SOURCES = \
-	AStar.c       \
-	AStar.h       \
-	camera.c       \
-	camera.h       \
-	char.c       \
-	char.h       \
-	char.inl       \
-	Client.c       \
-	Client.h       \
-	Clock.c       \
-	Clock.h       \
-	configfile.c       \
-	configfile.h       \
-	egoboo.h       \
-	egoboo_config.h       \
-	egoboo_math.c       \
-	egoboo_math.h       \
-	egoboo_math.inl       \
-	egoboo_rpc.c       \
-	egoboo_rpc.h       \
-	egoboo_strutil.c       \
-	egoboo_strutil.h       \
-	egoboo_types.c       \
-	egoboo_types.h       \
-	egoboo_types.inl       \
-	egoboo_utility.c       \
-	egoboo_utility.h       \
-	enchant.c       \
-	enchant.h       \
-	file_common.c       \
-	file_lin.c       \
-	Font.c       \
-	Font.h       \
-	Frustum.c       \
-	Frustum.h       \
-	game.c       \
-	game.h       \
-	graphic.c       \
-	graphic.h       \
-	graphic.inl       \
-	graphic_fan.c       \
-	graphic_mad.c       \
-	graphic_prt.c       \
-	id_md2.h       \
-	id_normals.c       \
-	id_normals.h       \
-	input.c       \
-	input.h       \
-	input.inl       \
-	Log.c       \
-	Log.h       \
-	Mad.c       \
-	Mad.h       \
-	Md2.c       \
-	Md2.h       \
-	Md2.inl       \
-	Menu.h       \
-	Menu.c       \
-	mesh.c       \
-	mesh.h       \
-	mesh.inl       \
-	module.c       \
-	module.h       \
-	NetFile.c       \
-	NetFile.h       \
-	Network.h       \
-	Network.inl       \
-	Network.c       \
-	object.c       \
-	object.h       \
-	object.inl       \
-	ogl_include.c       \
-	ogl_include.h       \
-	ogl_texture.c       \
-	ogl_texture.h       \
-	particle.c       \
-	particle.h       \
-	particle.inl       \
-	passage.c       \
-	passage.h       \
-	Physics.c       \
-	Physics.h       \
-	Physics.inl       \
-	proto.h       \
-	script.c       \
-	script.h       \
-	SDL_GetPixel.c       \
-	SDL_Pixel.h       \
-	SDL_PutPixel.c       \
-	SDL_rotozoom.c       \
-	SDL_rotozoom.h       \
-	Server.c       \
-	Server.h       \
-	sound.c       \
-	sound.h       \
-	System.h       \
-	System_lin.c       \
-	Task.c       \
-	Task.h       \
-	Ticker.c       \
-	Ticker.h       \
-	Timer.c       \
-	Timer.h       \
-	Ui.c       \
-	Ui.h
+bin_PROGRAMS = egoboo
 
-egoboo_2_7_7_DEPENDENCIES = \
-	../enet/callbacks.o \
-	../enet/host.o \
-	../enet/list.o \
-	../enet/packet.o \
-	../enet/peer.o \
-	../enet/protocol.o \
-	../enet/unix.o
+egoboo_SOURCES = \
+   AStar.c  \
+   camera.c  \
+   char.c  \
+   Client.c  \
+   Clock.c  \
+   configfile.c  \
+   egoboo_math.c  \
+   egoboo_rpc.c  \
+   egoboo_strutil.c  \
+   egoboo_types.c  \
+   egoboo_utility.c  \
+   enchant.c  \
+   file_common.c  \
+   file_lin.c  \
+   Font.c  \
+   Frustum.c  \
+   game.c  \
+   graphic.c  \
+   graphic_fan.c  \
+   graphic_mad.c  \
+   graphic_prt.c  \
+   id_normals.c  \
+   input.c  \
+   Log.c  \
+   Mad.c  \
+   Md2.c  \
+   Menu.c  \
+   mesh.c  \
+   module.c  \
+   NetFile.c  \
+   Network.c  \
+   object.c  \
+   ogl_include.c  \
+   ogl_texture.c  \
+   particle.c  \
+   passage.c  \
+   Physics.c  \
+   script.c  \
+   SDL_GetPixel.c  \
+   SDL_PutPixel.c  \
+   SDL_rotozoom.c  \
+   Server.c  \
+   sound.c  \
+   System_lin.c  \
+   Task.c  \
+   Ticker.c  \
+   Timer.c  \
+   Ui.c  \
+   ../enet/callbacks.c  \
+   ../enet/host.c  \
+   ../enet/list.c  \
+   ../enet/packet.c  \
+   ../enet/peer.c  \
+   ../enet/protocol.c  \
+   ../enet/unix.c
 
-egoboo_2_7_7_LDFLAGS = \
-	$(shell \
-	sdl-config \
-	--ldflags)$
+egoboo_CPPFLAGS = \
+   -DHAS_SOCKLEN_T
 
-egoboo_2_7_7_CFLAGS = \
-	$(shell \
-	sdl-config \
-	--cflags)$
+egoboo_CFLAGS = \
+   $(EGOBOO_CFLAGS) \
+   -I../enet/include \
+   -w
 
-egoboo_2_7_7_LDADD = \
-	-lSDL_ttf \
-	-lSDL_mixer \
-	-lSDL_image \
-	-lGL \
-	-lGLU
+egoboo_LDFLAGS =
 
-INCLUDES = \
-	-I../enet/include
-
-## File created by the gnome-build tools
-
+egoboo_LDADD = $(EGOBOO_LIBS) \
+   -lSDL_ttf \
+   -lSDL_mixer \
+   -lSDL_image \
+   -lGL \
+   -lGLU 
